--- a/template/_includes/header.html
+++ b/template/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="header__inner -exp -bg--dark">
     <div class="header__branding -wrap">
       <div class="site-logo">
-        <a href="/">{% site.title %}</a>
+        <a href="/">{{ site.title }}</a>
       </div>
     </div>
   </div>
