--- a/template/_layouts/core.html
+++ b/template/_layouts/core.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html lang="en">
   {% include head.html %}
   <body class="-fzero">
     {% include header.html %}
